[gd_scene load_steps=4 format=3 uid="uid://daydnrlr4feio"]

[ext_resource type="Script" path="res://scenes/ui/PauseMenu.gd" id="1_e0h05"]
[ext_resource type="PackedScene" uid="uid://de162qjng0dqa" path="res://scenes/ui/MainMenu.tscn" id="2_gg1sq"]
[ext_resource type="PackedScene" uid="uid://bw87okv5nwtl" path="res://scenes/ui/option.tscn" id="3_nes00"]

[node name="PauseMenu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0h05")
main_menu = ExtResource("2_gg1sq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="ResumeButtonPM" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="RestartButtonPM" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="SettingsButtonPM" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="MenuButtonPM" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"

[node name="QuitButtonPM" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="volumeMenu" parent="." instance=ExtResource("3_nes00")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButtonPM" to="." method="_on_settings_button_pm_pressed"]
